--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,6 @@
 *.gch
 *.pch
 
-# Linker files
-*.ilk
-
-# Debugger Files
-*.pdb
-
 # Compiled Dynamic libraries
 *.so
 *.dylib
@@ -37,5 +31,52 @@
 *.out
 *.app
 
-# debug information files
-*.dwo
+# CMake
+build/
+cmake-build-debug/
+cmake-release-debug/
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# clangd
+.cache/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+draft/
+
+# log for perf
+log
+tmp
+*.rdb
+*.svg
+perf/
+perf.data*
+*.data
+*.perf
+*.folded
+palette.map
+
+# public/index.html for httpd
+public/
