--- a/04图/CMakeLists.txt
+++ b/04图/CMakeLists.txt
@@ -20,3 +20,5 @@ message("\n--------------------------------------------")
 add_subdirectory(./test)
 
 add_subdirectory(./lib)
+
+add_subdirectory(./src)
