--- a/03树和二叉树/test/CMakeLists.txt
+++ b/03树和二叉树/test/CMakeLists.txt
@@ -2,7 +2,11 @@
 message("CMakeLists.txt for test directory")
 
 # 所有 lib 下的实现文件
-file(GLOB LIB_SOURCES ${PROJECT_SOURCE_DIR}/lib/*.cpp)
+set(TREE_LIBS
+  traverse
+  tree_array
+  utils
+)
 
 # 所有测试文件
 file(GLOB_RECURSE TESTS ./*.cpp)
@@ -13,11 +17,12 @@ foreach(v ${TESTS})
   string(REPLACE "/" "_" target_name ${relative_path})
   get_filename_component(target_name ${target_name} NAME_WE)
 
-  # 把 lib 源文件也加进来
-  add_executable(${target_name} ${v} ${LIB_SOURCES})
+  add_executable(${target_name} ${v})
 
   # 头文件路径
   target_include_directories(${target_name} PUBLIC ${PROJECT_SOURCE_DIR}/include)
+
+  target_link_libraries(${target_name} PRIVATE ${TREE_LIBS})
 endforeach()
 
 
