--- a/03树和二叉树/test/CMakeLists.txt
+++ b/03树和二叉树/test/CMakeLists.txt
@@ -9,7 +9,7 @@ set(TREE_LIBS
 )
 
 # 所有测试文件
-file(GLOB_RECURSE TESTS ./*.cpp)
+file(GLOB_RECURSE TESTS *.cpp)
 
 foreach(v ${TESTS})
   message("Processing: ${v}")
