--- a/05查找/algorithm/CMakeLists.txt
+++ b/05查找/algorithm/CMakeLists.txt
@@ -1,4 +1,4 @@
-# for each "src/x.cpp", generate target "x"
+# for each "algorithm/x.cpp", generate target "x"
 message("CMakeLists.txt for test directory")
 
 # 所有测试文件
@@ -6,7 +6,7 @@ file(GLOB_RECURSE SRCS *.cpp)
 
 foreach(v ${SRCS})
   message("Processing: ${v}")
-  file(RELATIVE_PATH relative_path ${PROJECT_SOURCE_DIR}/src ${v})
+  file(RELATIVE_PATH relative_path ${PROJECT_SOURCE_DIR}/algorithm ${v})
   string(REPLACE "/" "_" target_name ${relative_path})
   get_filename_component(target_name ${target_name} NAME_WE)
 
