--- a/01线性表/CMakeLists.txt
+++ b/01线性表/CMakeLists.txt
@@ -48,3 +48,5 @@ message("\n--------------------------------------------")
 add_subdirectory(./lib)
 
 add_subdirectory(./test)
+
+add_subdirectory(./algorithm)
